Add support for type converting indexed collection elements. Make "Collection_" a constant.